docs: describe the implemented engine and app (#25)
AGENTS.md gains the package and component tables, the dataset provenance, the Brave-order pipeline, the network
posture, and the Robolectric, Compose, and Espresso lessons the test suite depends on. The README describes what the
app does now, states the privacy behavior accurately, and points builders at the mise tasks until releases exist.

Co-authored-by: Claude Fable 5.1 <noreply@anthropic.com>